@@ -7,7 +7,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: graph.tcl,v 1.31 2008/10/11 23:23:47 andreas_kupries Exp $
+# RCS: @(#) $Id: graph.tcl,v 1.32 2008/12/13 03:57:33 andreas_kupries Exp $
 
 # @mdgen EXCLUDE: graph_c.tcl
 
@@ -177,4 +177,4 @@ namespace eval ::struct {
     namespace export graph
 }
 
-package provide struct::graph 2.3
+package provide struct::graph 2.3.1
